# alive

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  README.mdt  cargo.dist.sh  clippy.sh  conf  dev.sh  dist.sh  doc.sh  docker-compose.yml  env.sh  fly.toml  new.alter.sh  new.watch.sh  package.json  plugin.sh  rmdbg.sh  run.sh  sdk.sh
alive/: Cargo.toml  README.md  README.mdt
alive/src/: alive.rs  api.rs  lib.rs  on_err.rs  on_ok.rs
alive/tests/: main.rs
alive_alter/: Cargo.toml  README.md  README.mdt
alive_alter/src/: denoise.rs  lib.rs  recover.rs  title_txt.rs  warn.rs  yml.rs
alive_alter/tests/: main.rs
alive_api/: Cargo.toml  README.md  README.mdt  api.proto  build.rs
alive_api/src/: lib.rs  task.rs
alive_plugin/: .gitignore  _Cargo.toml
alive_plugin/src/: .gitignore  alter_macro.rs  lib.rs  run.rs  watch_macro.rs
alive_watch/: Cargo.toml  README.md  README.mdt
alive_watch/src/: cluster_alive.rs  conf.rs  lib.rs  yml.rs  yml_cluster.rs  yml_cluster_vps_li.rs
alive_watch/tests/: main.rs
alter/cout/: Cargo.toml  README.md
alter/cout/src/: lib.rs
alter/lark/: Cargo.toml  README.md  README.mdt
alter/lark/conf/: lark.sh
alter/lark/src/: lib.rs
alter/mail/: Cargo.toml  README.md  README.mdt
alter/mail/conf/: mail.sh  mail.yml
alter/mail/src/: lib.rs
alter/wxpush/: Cargo.toml  README.md  README.mdt
alter/wxpush/conf/: wxpush.sh
alter/wxpush/src/: lib.rs
conf.example/: .gitignore  env.sh  fly.toml  plugin.dev.yml  plugin.ol.yml
conf.example/cluster/: all.yml  ol.yml
htm/: .envrc  .gitignore  README.md  biome.json  cloudflare-page.build.sh  dev.sh  env.sh  example.env.sh  index.html  package.json  pnpm-lock.yaml  vite.config.js
htm/conf/: dev.js  ol.js
htm/public/: s.js
htm/sh/: NodeModules.coffee  build.sh  cdn.sh  conf.coffee  dev.sh  env.coffee  env.sh  filename_min.coffee  i18n.upload.coffee  index.coffee  index.pug  public.js.sh  svg.sh  svg.var.coffee  svgo.config.cjs
htm/sh/public/: .gitignore  serviceWorker.coffee  shareWorker.coffee
htm/src/: Index.svelte  Status.svelte  index.coffee  index.js  index.pug
htm/src/lib/: S.js
htm/src/styl/: site.styl  svg.css  var.styl
htm/src/styl/base/: button.styl  checkbox.styl  fade.styl  form.styl  ico.styl  ing.styl  input.styl  reset.styl
sdk/: dist.sh
sdk/js/: README.md  index.js  package.json  proto.js
sh/: conf_example.coffee  conf_example.sh  conf_init.coffee  conf_init.sh  cpso.sh  new.sh  pid.sh  plugin.coffee  udeps.coffee  udeps.sh  upgrade.coffee  upgrade.sh
srv/: Cargo.toml  README.md  README.mdt  api.nt  api.proto  dev.sh  docker.build.sh  docker.run.sh  docker.shell.sh  docker.stop.sh  fly.dist.sh  fly.secret.env.clear.sh  fly.secret.env.set.sh  log.sh  test.sh  tokio-console.sh
srv/sh/: env.coffee  env.sh  rsync_conf.sh
srv/src/: li.rs  main.rs  ping.rs
srv/ssl/: .gitignore  docker-compose.yml  down.sh  log.sh  nginx.yml  ssl.sh  up.sh
srv/ssl/conf/: .gitignore
srv/ssl/conf/nginx/: .gitignore  mime.types  nginx.conf
srv/ssl/conf/nginx/conf/: dev.conf
srv/ssl/conf/nginx/header/: _access.conf  access.conf  proxy.conf  ws.conf
srv/ssl/conf/nginx/upstream/: dev.conf
tmpl/alter/: Cargo.toml  README.md
tmpl/alter/src/: lib.rs
tmpl/watch/: Cargo.toml  README.md
tmpl/watch/src/: lib.rs
watch/_lib/mysql_watch/: Cargo.toml
watch/_lib/mysql_watch/src/: lib.rs
watch/_lib/redis_watch/: Cargo.toml
watch/_lib/redis_watch/src/: lib.rs
watch/cdn_refresh/: Cargo.toml  README.md  README.mdt
watch/cdn_refresh/conf/: cdn_refresh.yml
watch/cdn_refresh/src/: lib.rs
watch/cname_flatten/: Cargo.toml  README.md  README.mdt
watch/cname_flatten/conf/: cname_flatten.sh  cname_flatten.yml
watch/cname_flatten/src/: lib.rs
watch/cron/: Cargo.toml  README.md  README.mdt
watch/cron/conf/: cron.yml
watch/cron/src/: lib.rs
watch/domain/: Cargo.toml  README.md  README.mdt  test.sh
watch/domain/conf/: domain.yml
watch/domain/src/: lib.rs  whois.rs
watch/domain/tests/: main.rs
watch/heartbeat/: Cargo.toml  README.md  README.mdt
watch/heartbeat/conf/: heartbeat.yml
watch/heartbeat/src/: lib.rs
watch/https/: Cargo.toml  README.md  README.mdt
watch/https/conf/: https.yml
watch/https/src/: lib.rs
watch/ipv6_proxy/: Cargo.toml  README.md  README.mdt
watch/ipv6_proxy/conf/: ipv6_proxy.yml
watch/ipv6_proxy/conf/ipv6_proxy/: ipv6_proxy.sh  ipv6_proxy_test.sh
watch/ipv6_proxy/src/: lib.rs
watch/kvrocks/: Cargo.toml  README.md  README.mdt
watch/kvrocks/conf/: kvrocks.yml
watch/kvrocks/src/: lib.rs
watch/kvrocks_sentinel/: Cargo.toml  README.md  README.mdt
watch/kvrocks_sentinel/conf/: kvrocks_sentinel.yml
watch/kvrocks_sentinel/src/: lib.rs
watch/mariadb/: Cargo.toml  README.md  README.mdt
watch/mariadb/conf/: mariadb.yml
watch/mariadb/src/: lib.rs
watch/mysql_iptable/: Cargo.toml  README.md  README.mdt
watch/mysql_iptable/conf/: mysql_iptable.yml
watch/mysql_iptable/src/: lib.rs
watch/oceanbase/: Cargo.toml  README.md
watch/oceanbase/conf/: mysql.yml
watch/oceanbase/src/: lib.rs
watch/orchestrator/: Cargo.toml  README.md  README.mdt
watch/orchestrator/conf/: orchestrator.yml
watch/orchestrator/src/: lib.rs
watch/ping/: Cargo.toml  README.md  README.mdt
watch/ping/conf/: ping.yml
watch/ping/src/: lib.rs
watch/ping_ver/: Cargo.toml  README.md  README.mdt
watch/ping_ver/conf/: ping_ver.yml
watch/ping_ver/src/: lib.rs
watch/smtp/: Cargo.toml  README.md  README.mdt
watch/smtp/conf/: smtp.yml
watch/smtp/src/: lib.rs
