[dependencies]
aok = "0.1.12"
coarsetime = "0.1.34"
dashmap = "6.0.1"
skiplist = "0.5.1"
static_init = "1.0.3"
tracing = "0.1.40"
xerr = "0.1.14"
loginit = "0.1.13"
sts = "0.1.23"
chrono = "0.4.38"

[dependencies.alive_watch]
version = "0.1.5"
path = "../alive_watch"

[dependencies.alive_alter]
version = "0.1.4"
path = "../alive_alter"

[dependencies.alive_api]
version = "0.1.6"
path = "../alive_api"

[dependencies.alive_plugin]
version = "0.1.10"
path = "../alive_plugin"

[dependencies.tokio]
version = "1.38.0"
features = [ "macros", "rt", "rt-multi-thread", "time", "fs", "io-util" ]

[package]
name = "alive"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://atomgit.com/i18n/alive.git"
homepage = "https://atomgit.com/i18n/alive"
description = "alive"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies.alive_plugin]
version = "0.1.10"
path = "../alive_plugin"
