[dependencies]
prost = "0.12.6"
strum = { version = "0.26.3", features = ["strum_macros", "derive", "phf"] }

[package]
name = "alive_api"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://atomgit.com/i18n/alive.git"
homepage = "https://atomgit.com/i18n/alive/tree/dev/alive_api"
description = "alive_api"

[dev-dependencies]
aok = "0.1.12"
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
aok = "0.1.12"
prost-build = "0.12.6"
