[package]
name = "tmpl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://atomgit.com/i18n/alive.git"
homepage = "https://atomgit.com/i18n/alive/tree/dev/alter/tmpl"
description = "tmpl : alter plugin for alive"

[package.metadata.docs.rs]
all-features = true

[dependencies]
alive_alter = { version = "0.1.0", path = "../../alive_alter" }
aok = "0.1.3"

[dev-dependencies]
loginit = "0.1.10"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
