[package]
name = "cdn_refresh"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://atomgit.com/i18n/alive.git"
homepage = "https://atomgit.com/i18n/alive/tree/dev/watch/cdn_refresh"
description = "cdn_refresh"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[dependencies]
aok = "0.1.12"
tokio-postgres = "0.7.10"
rustls = "0.23.11"
tlsinit = "0.1.2"
tokio-postgres-tls = "0.12.0"
tokio = "1.38.0"
chrono = "0.4.38"

[dependencies.alive_api]
version = "0.1.6"
path = "../../alive_api"

[dependencies.alive_watch]
version = "0.1.5"
path = "../../alive_watch"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.ifs]
version = "0.1.36"
default-features = false
features = ["fs"]
