[package]
name = "cname_flatten"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://atomgit.com/i18n/alive.git"
homepage = "https://atomgit.com/i18n/alive/tree/dev/watch/cname_flatten"
description = "cname_flatten"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
aok = "0.1.12"
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.38.0"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]

[dependencies]
aok = "0.1.12"
genv = "0.1.10"
ireq = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dependencies.alive_watch]
version = "0.1.5"
path = "../../alive_watch"

[dependencies.alive_api]
version = "0.1.6"
path = "../../alive_api"

[dependencies.ifs]
version = "0.1.36"
default-features = false
features = [ "fs" ]
