[package]
name = "mariadb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://atomgit.com/i18n/alive.git"
homepage = "https://atomgit.com/i18n/alive/tree/dev/watch/mariadb"
description = "mysql"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[dependencies]
aok = "0.1.12"
serde_yaml = "0.9.34"
genv = "0.1.10"
static_init = "1.0.3"
mysql_async = "0.34.1"

[dependencies.mysql_watch]
version = "0.1.0"
path = "../_lib/mysql_watch"

[dependencies.alive_api]
version = "0.1.6"
path = "../../alive_api"

[dependencies.ifs]
version = "0.1.36"
default-features = false
features = ["fs"]

[dependencies.alive_watch]
version = "0.1.5"
path = "../../alive_watch"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt", "rt-multi-thread", "time", "fs", "io-util"]
