[package]
name = "mysql_watch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aok = "0.1.12"
mysql_async = "0.34.1"

[dependencies.alive_api]
version = "0.1.6"
path = "../../../alive_api"

[dependencies.alive_watch]
version = "0.1.5"
path = "../../../alive_watch"
features = [ "cluster_alive" ]

[dependencies.serde]
version = "1.0.203"
features = [ "derive" ]

[dependencies.tokio]
version = "1.38.0"
features = [ "macros", "rt", "rt-multi-thread", "time", "fs", "io-util" ]
